[gd_scene load_steps=5 format=3 uid="uid://bv3cnfgtwgke3"]

[ext_resource type="Script" path="res://src/demo/intermission/bee-demo.gd" id="1_n2k8j"]
[ext_resource type="StyleBox" uid="uid://dwuudlvawkj6" path="res://src/main/ui/menu/rounded-style-box.tres" id="3_3upha"]
[ext_resource type="PackedScene" uid="uid://ba4t2owtshntv" path="res://src/main/intermission/Flower.tscn" id="3_rmh52"]
[ext_resource type="PackedScene" uid="uid://vc583hg1thx4" path="res://src/main/intermission/Bee.tscn" id="4_bqprx"]

[node name="Demo" type="Node"]
script = ExtResource("1_n2k8j")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
theme_override_styles/panel = ExtResource("3_3upha")

[node name="Flower1" parent="Panel" instance=ExtResource("3_rmh52")]
unique_name_in_owner = true
position = Vector2(251, 243)

[node name="Flower2" parent="Panel" instance=ExtResource("3_rmh52")]
unique_name_in_owner = true
position = Vector2(603, 237)

[node name="Bee1" parent="Panel" instance=ExtResource("4_bqprx")]
unique_name_in_owner = true
position = Vector2(378, 317)

[node name="Bee2" parent="Panel" instance=ExtResource("4_bqprx")]
unique_name_in_owner = true
position = Vector2(489, 198)

[connection signal="resized" from="Panel" to="." method="_on_panel_resized"]
